# raspi-car

./: .gitignore  BME280.c  CMakeLists.txt  Cargo.toml  Makefile  README.md  bme  bmeH  bmeP  bmeT  direct  distance.c  getD  handler.h  init.sh  left  main.cpp  motion.conf  move  move.c  move.h  right  run.c  sgx.h  stop  test  trace  wiringpi_3.2_arm64.deb
.cargo/: config.toml
raspi-car-control/: README.md  package-lock.json  package.json
raspi-car-control/src/: App.vue  main.js
src/: main.rs
src/Cbind/: BME280.h  bme280.rs  mod.rs  move.h  move.rs  sgx.h  sgx.rs
